--- a/todo-list/src/App.css
+++ b/todo-list/src/App.css
@@ -1,6 +1,6 @@
 /* Đặt toàn bộ trang có background màu nhạt */
 body {
-  background-color: #f4f4f4;
+  background-color: #96707f;
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
